# video_converter_nvenc_av1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TESTS.md  pyproject.toml  usercustomize.py
.github/workflows/: ci.yml
src/video_converter_av1/: __init__.py  converter.py
tests/: test_converter.py
video_converter_av1/: __init__.py
