[project]
name = "video-converter-nvenc-av1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.13.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
pythonpath = ["src"]
